Fixed quick donation title alignment

--- a/assets/scss/components/wpb/quick-donation.scss
+++ b/assets/scss/components/wpb/quick-donation.scss
@@ -299,8 +299,14 @@
   }
 
   &:not(.fixed-quick-donation) {
-    .quick-donation--title .toggle-quick-donation {
-      display: none;
+    .quick-donation--title {
+      @media (max-width: 992px) {
+        text-align: center;
+      }
+      
+      .toggle-quick-donation {
+        display: none;
+      }
     }
     
     .quick-donation--content {
